Adicionando informacoes home

--- a/index.html
+++ b/index.html
@@ -25,7 +25,21 @@
     </p>
 
     <div class="home">
-        <p>teste</p>
+        <h2>Nossa história</h2>
+
+        <p>
+            Nossa hamburgueria foi criada em 2050, hoje 100 anos depois
+            ainda somos referencia nesse mercado tecnológico, aqui você pode
+            realizar pedidos que são entregues em todo o espaço.
+        </p>
+
+        <p>
+            Além disso você também pode comprar nossa linha de produtos que foi
+            desenvolvida em homenagem a nosso centenário!
+            <p>
+                <button>Veja mais!</button>
+            </p> 
+        </p>
     </div>
 
     <div class="lanches">
