Adicionando pagina produtos e criando menu

--- a/produtos.html
+++ b/produtos.html
@@ -10,24 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <header>
-        <nav class="menu">
-            <a href="#">ED<span>bur</span>GUER</a>
-            <ul class="nav-menu">
-                <li class="nav-item">Home</li>
-                <li class="nav-item">Hamburgures</li>
-                <li class="nav-item">Produtos</li>
-                <i class='bx bx-search'></i>
-            </ul>
-        </nav>
-    </header>
 
-    <h1>Ediburguer</h1>
+    <h1>Produtos Ediburguer</h1>
 
-    <h2>Ediburguer, a maneira mais moderna de pedir seu lanche!</h2>
+    <h2>Nonheça nossa linha de produtos tecnológicos!</h2>
 
     <p>
         <strong>
@@ -49,7 +37,7 @@
             Além disso você também pode comprar nossa linha de produtos que foi
             desenvolvida em homenagem a nosso centenário!
             <p>
-                <button href=""><a href="./produtos.html">Veja mais!</a></button>
+                <button>Veja mais!</button>
             </p> 
         </p>
     </div>
