Ajustando menu do site e iniciando homepage

--- a/index.html
+++ b/index.html
@@ -15,26 +15,40 @@
 <body>
     <header>
         <nav class="menu">
-            <a href="#">ED<span>bur</span>GUER</a>
-            <ul class="nav-menu">
-                <li class="nav-item">Home</li>
-                <li class="nav-item">Hamburgures</li>
-                <li class="nav-item">Produtos</li>
+            <a href="#" class="logo">EDI<span>bur</span>GUER</a>
+            <ul class="navMenu">
+                <li class="navItem"><a href="#">Home</a></li>
+                <li class="navItem"><a href="#lanches">Hamburgures</a></li>
+                <li class="navItem"><a href="">Produtos</a></li>
                 <i class='bx bx-search'></i>
             </ul>
+            <div class="divMenu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </nav>
     </header>
 
-    <h1>Ediburguer</h1>
+    <main>
+        <section class="home">
+            <div class="homeText">
+                <h1>Ediburguer</h1>
 
-    <h2>Ediburguer, a maneira mais moderna de pedir seu lanche!</h2>
+                <h2>Ediburguer, a maneira mais moderna de pedir seu lanche!</h2>
 
-    <p>
-        <strong>
-            Nosso fast food prioriza a relação com o cliente,
-            oferecendo tudo o que há de melhor.
-        </strong>
-    </p>
+                <p>
+                <strong>
+                    Nosso fast food prioriza a relação com o cliente,
+                    oferecendo tudo o que há de melhor.
+                </strong>
+                </p>
+            </div>
+            <div class="homeImg">
+
+            </div>
+        </section>
+    </main>
 
     <div class="home">
         <h2>Nossa história</h2>
@@ -54,7 +68,7 @@
         </p>
     </div>
 
-    <div class="lanches">
+    <div class="lanches" id="lanches">
 
         <model-viewer
         class="img-principal"
